--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "amplify-vite-react-template",
+  "name": "scrum-buddy",
   "private": true,
   "version": "0.0.0",
   "type": "module",
